removed hr due to z-index issue

--- a/sass/layout/_current.scss
+++ b/sass/layout/_current.scss
@@ -6,7 +6,7 @@ h3 {
 .currentProjects p {
   margin: 2rem auto;
   line-height: 2rem;
-  z-index: 0;
+  // z-index: 0;
 }
 
 .currentProjects hr {
