--- a/style.css
+++ b/style.css
@@ -1052,8 +1052,7 @@ h3 {
 
 .currentProjects p {
   margin: 2rem auto;
-  line-height: 2rem;
-  z-index: 0; }
+  line-height: 2rem; }
 
 .currentProjects hr {
   margin: 2rem;
